--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             border-radius: 8px; /* Rounded corners */
             letter-spacing: 0.5px; /* Letter spacing */
             transition: opacity 0.3s ease; /* Smooth transition for opacity */
+            background-color: lightgrey; /* Light grey background */
+            color: black; /* Black text */
         }
         /* Styling for button when active (clicked) */
         button:active {
